# DWG-forensic-tool

./: .gitignore  CASE_2026-001_COMPLETE_LITIGATION_PACKAGE.txt  CLAUDE.md  CONTRACTED_VS_DELIVERED_FORENSIC_ANALYSIS.txt  CONTRIBUTING.md  DANNY_GARCIA_EXHIBIT_ANALYSIS_EXECUTIVE_SUMMARY.txt  DIAGNOSTIC_LOGGING_IMPLEMENTATION.md  DWG_TIMESTAMP_ANALYSIS.csv  DWG_TIMESTAMP_FORENSIC_ANALYSIS.csv  DWG_TIMESTAMP_FORENSIC_ANALYSIS.txt  DWG_TIMESTAMP_FORENSIC_REPORT.txt  EMAIL_TIMELINE_DELIVERABLES.txt  EMAIL_TIMELINE_README.txt  EMAIL_TIMELINE_SUMMARY.txt  EXECUTE_FORENSIC_SWEEP.md  FORENSIC_SWEEP_EXECUTIVE_SUMMARY.md  FORENSIC_SWEEP_README.md  MANUAL_CAD_INSPECTION_PROTOCOL.md  PHASE2_EXECUTIVE_SUMMARY.txt  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE_4_3_NARRATOR_INTEGRATION.md  PRIVILEGE_REVIEW_COMPLETION_REPORT.txt  README.md  RVT_ELEMENT_ANALYSIS_PHASE_A.txt  TIMELINE_EVIDENCE_SUMMARY.md  TRIAL_EXHIBIT_ORGANIZATION_COMPLETE.md  analysis_output.json  case_cataloger.py  compare_designs.py  contracted_clean.json  contracted_design_analysis.json  delivered_design_analysis.json  email_timeline_parser.py  forensic_specialized_reports.py  forensic_standards_reference.md  forensic_sweep_153_dwg.py  implementation_roadmap.md  lane_0024_ole2_structure.txt  lane_primary_amenities_found.txt  lane_primary_ole2_structure.txt  (+13 more)
.claude/: settings.local.json
.claude-flow/: agents.json
.serena/: project.yml
NEO4J_SETUP/: DELIVERABLES_SUMMARY.md  DOCUMENT_INGESTION_TEMPLATE.py  GRAPH_INITIALIZATION_SCRIPT.py  GRAPH_VISUALIZATION_GENERATOR.py  INSTALL.md  NEO4J_CYPHER_QUERIES.txt  NEO4J_SCHEMA.txt  QUICK_REFERENCE.md  README.md  neo4j_utils.py
docs/: DESIGN_drawing_vars_SUMMARY.md  DESIGN_drawing_vars_refactor.md  DWG_FORMAT_RESEARCH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE1.md  IMPLEMENTATION_PLAN_v3.md  PRD.md  TECHNICAL_SPEC.md
dwg_forensic/: __init__.py  cli.py  gui.py  models.py
exampleCAD/: CaseFile_Subject_libredwg.json  LibreDWG_sample_libredwg.json  OCCC_PH5A_DUSTIN MODEL - Floor Plan - Site.pcp  README.md
legal_research/: ANTICIPATED_LEGAL_CHALLENGES.txt  COURT_PRECEDENT_SUMMARY.txt  DEPOSITION_PROTECTION_STRATEGY.txt  EXPERT_QUALIFICATION_GUIDE.txt  FEDERAL_vs_STATE_COMPARISON.csv  LEGAL_FRAMEWORK_MEMO.txt  README.txt
logs/: notification.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_stop.json  user_prompt_submit.json
phase_c_partition_analysis/: KEY_PARTITION_CHANGES_SUMMARY.txt  PARTITION_FORENSIC_EXECUTIVE_SUMMARY.txt  (+8 more)
(+372 files in other folders)
